--- a/package.json
+++ b/package.json
@@ -9,19 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.844.0",
+    "@aws-sdk/lib-storage": "^3.844.0",
+    "@supabase/supabase-js": "^2.51.0",
+    "bencode": "^4.0.0",
+    "multer": "^2.0.1",
+    "next": "15.3.5",
+    "node-stream-zip": "^1.15.0",
+    "parse-torrent": "^11.0.18",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.5"
+    "torrent-stream": "^1.2.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
+    "@types/bencode": "^2.0.4",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20",
+    "@types/parse-torrent": "^5.8.7",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "@types/torrent-stream": "^0.0.9",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
