--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@aws-sdk/client-s3": "^3.844.0",
     "@aws-sdk/lib-storage": "^3.844.0",
     "@supabase/supabase-js": "^2.51.0",
+    "@types/ftp": "^0.3.36",
     "bencode": "^4.0.0",
+    "ftp": "^0.3.10",
+    "ftp-srv": "^4.6.3",
     "multer": "^2.0.1",
     "next": "15.3.5",
     "node-stream-zip": "^1.15.0",
